Auto-refactor assorted Java lint (#1009)
* Auto-refactor lint cleanup

SequencedCollections: get(0) -> getFirst(), etc
Add missing @NotNull/@Nullable
Simplify test assertions
Map operation simplification
Remove redundant throws clause
Switch to parameterized log message
C-style array -> Java-style array declaration
Delete overridden methods identical to parent
Switch statement -> enhanced switch statement
Remove redundant imports

* Fix test logging trickery

* Update ms2/src/org/labkey/ms2/pipeline/mascot/MascotClientImpl.java

Co-authored-by: Adam Rauch <adam@labkey.com>

---------

Co-authored-by: Adam Rauch <adam@labkey.com>